# a1-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  models.py
app/api/: api.py
app/api/endpoints/: index.py  invoices.py
app/core/: config.py
app/schemas/: requests.py  responses.py
tests/: conftest.py
tests/endpoints/: test_index.py  test_invoices.py
