[tool.poetry]
authors = ["Quantum Software Engineering Bootcamp"]
description = "API Project - Assignment I"
name = "api-project"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.89.1"
python = "^3.11"
python-multipart = ">=0.0.5,<0.0.6"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.4"}

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.1"
black = "^23.1.0"
coverage = "^7.1.0"
flake8 = "^6.0.0"
httpx = "^0.23.3"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pre-commit = "^3.0.4"
pytest-env = "^0.8.1"
pytest-mock = "^3.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["tests"]

[tool.isort]
profile = "black"
